--- a/src/client/app.scss
+++ b/src/client/app.scss
@@ -1,3 +1,15 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Raleway', sans-serif;
+    line-height: 1.6;
+    font-size: 16px;
+}
+
 .container {
     max-width: 1100px;
     margin: auto;
