--- a/src/client/components/layout/landing/landing.scss
+++ b/src/client/components/layout/landing/landing.scss
@@ -1,6 +1,6 @@
 .landing {
     position: relative;
-    // background-image: url('../img/showcase.jpg');
+    background-image: url('~images/showcase.jpg');
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -37,4 +37,32 @@
 .introMessage {
     font-size: 24px;
     margin-bottom: 16px;
+}
+
+.buttonsWrapper {
+    display: flex;
+    margin-top: 16px;
+}
+
+.btn {
+    display: inline-block;
+    padding: 6px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-right: 8px;
+    transition: opacity 0.2s ease-in;
+    outline: none;
+    text-decoration: none;
+}
+
+.btnPrimary {
+    background: #3f51b5;
+    color: #fff;
+}
+
+.btnLight {
+    background: #f4f4f4;
+    color: #333;
 }
