--- a/src/client/components/dashboard/dashboard.scss
+++ b/src/client/components/dashboard/dashboard.scss
@@ -1,3 +1,12 @@
+.container {
+    max-width: 1100px;
+    margin: auto;
+    overflow: hidden;
+    padding: 0 32px;
+    margin-top: 96px;
+    margin-bottom: 48px;
+}
+
 .header {
     font-size: 48px;
     line-height: 1.2;
@@ -27,4 +36,13 @@
 .btnPrimary {
     background: #3f51b5;
     color: #fff;
+}
+
+.btnLight {
+    background: #f4f4f4;
+    color: #333;
+}
+
+.icon {
+    color: #17a2b8;
 }
