--- a/src/client/components/auth/register/register.scss
+++ b/src/client/components/auth/register/register.scss
@@ -31,3 +31,10 @@
     text-decoration: none;
     color: #3f51b5
 }
+
+.alertWrapper {
+    position: absolute;
+    right: 24px;
+    bottom: 24px;
+    left: auto;
+}
